<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/dashboard" />
    <item
        android:id="@+id/nav_pos"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/pos" />
    <item
        android:id="@+id/nav_items"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/items" />
    <item
        android:id="@+id/nav_transactions"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/transactions" />
    <item
        android:id="@+id/nav_more"
        android:icon="@android:drawable/ic_menu_more"
        android:title="Lainnya" />
</menu>
